tests/semantic/subsumption/subsumption.err
Error: Subsumptive relation "A"  must not be a nullary relation in file subsumption.dl at line 9
.decl A() btree_delete
------^----------------
Warning: No subsumptive rule for relation C in file subsumption.dl at line 17
.decl C(x:number, y:number) btree_delete
------^----------------------------------
Error: Subsumption must compare tuples from the same relation in file subsumption.dl at line 21
B(x,y1) <= C(x,y2) :-
^---------------------
2 errors generated, evaluation aborted
